# ghost-in-shells

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
configs/: logging.yaml
demo/: prompt.py
demo/configs/: logging.yaml
docs/logs/: 2023-05-19.md
framework/ghost/: ghost.py
framework/shell/: shell.py
ghoshell/: container.py  meta.py  url.py
ghoshell/contracts/: __init__.py  api.py  cache.py  contract.py  logger.py  meta.py
ghoshell/ghost/: __init__.py  _operators.py  attention.py  context.py  error.py  events.py  exceptions.py  features.py  ghost.py  intention.py  io.py  memory.py  messenger.py  mindset.py  operate.py  operation.py  operator.py  runtime.py  sending.py  session.py  tool.py  uml.py  url.py  utils.py
ghoshell/ghost_fmk/: ____focus.py  __init__.py  _operators.py  attend.py  clone.py  config.py  context.py  contracts.py  focus.py  ghost.py  memory.py  middleware.py  mind.py  mindset.py  operators.py  providers.py  runtime.py  sending.py  session.py  utils.py
ghoshell/llms/: __init__.py  adapters.py  bootstrapper.py  contracts.py  langchain.py  langchain_adapters.py  openai_contracts.py  providers.py  utils.py
ghoshell/messages/: __init__.py  base.py  error.py  io.py  messenger.py  tasked.py  text.py
ghoshell/messenger/: __init__.py  io.py  messenger.py
ghoshell/mocks/: __init__.py  baidu_speech.py  ghost.py  message_queue.py  think_metas.py
ghoshell/prototypes/: __init__.py
ghoshell/scripts/: script_console.py  script_init.py  script_speech.py  script_sphero.py
ghoshell/shell/: __init__.py  excetions.py  framework.py  messenger.py  shell.py
ghoshell/shell_fmk/: __init__.py  messengers.py  mocks.py  shell.py
ghoshell/shell_protos/: __init__.py
ghoshell/shell_prototypes/: __init__.py
ghoshell/utils/: __init__.py  (+3 more)
removed/: __discard_operators.py
(+376 files in other folders)
